# mctx-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  demo.md  design-decisions.md  ipv6.md  metrics.md  python.md  raw-ip.md  raw-packets.md  usage.md
mctx-core-py/: Cargo.toml  README.md  pyproject.toml
mctx-core-py/python/mctx_core/: __init__.py  asyncio.py
mctx-core-py/python/tests/: test_bindings.py
mctx-core-py/src/: lib.rs
src/: config.rs  context.rs  error.rs  jsonl.rs  lib.rs  metrics.rs  platform.rs  publication.rs  report.rs  socket_cache.rs  test_support.rs  tokio_adapter.rs
src/raw/: capabilities.rs  config.rs  context.rs  datagram.rs  link.rs  linux_packet.rs  linux_route.rs  macos_bpf.rs  mod.rs  platform.rs  publication.rs  report.rs
src/raw_ip/: capabilities.rs  config.rs  context.rs  datagram.rs  mod.rs  platform.rs  publication.rs  report.rs
tests/: raw_ip_linux_namespace.rs  raw_route_egress_linux_namespace.rs  raw_route_ipv6_linux_namespace.rs
