[package]
name = "mctx-core-py"
version = "0.2.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Python bindings for the mctx-core multicast sender library."
repository = "https://github.com/QUICast/mctx-core"
homepage = "https://github.com/QUICast/mctx-core"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
mctx-core = { version = "0.2.1", path = ".." }
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py39"] }

[build-dependencies]
pyo3-build-config = "0.28.3"
